cluster/apps/monitoring/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "grafana.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 80
